--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/admin-scripts.js"></script>
+<script src="/omega/omega-admin.js"></script>
 
 </body>
 </html>
