--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/scripts.js"></script>
+<script src="/omega/omega.js"></script>
 
 </body>
 </html>
